--- a/static/global.css
+++ b/static/global.css
@@ -33,10 +33,10 @@ input,
 button,
 select,
 textarea {
-  color: var(--primary-font-color);
+  color: black;
+  background-color: white;
   font-family: inherit;
   font-size: inherit;
-  color: inherit;
   padding: 0;
   margin: 0;
   box-sizing: inherit;
