--- a/static/global.css
+++ b/static/global.css
@@ -1,9 +1,11 @@
 :root {
   --primary-red: #e54242;
-  --primary-font-color: #ffffff;
+  --primary-font-color: #111111;
   --backgound-color: #232a2e;
-  --primary-dark: #707070;
+  --primary-dark: #202020;
   --primary-purple: #ad72ff;
+  --purple-bg: #e3e1ff;
+  --white: #ffffff;
   font-size: 16px;
 }
 
@@ -12,6 +14,7 @@
   margin: 0;
   box-sizing: border-box;
   word-wrap: break-word;
+  outline: none;
 }
 
 html,
@@ -21,7 +24,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   color: var(--primary-font-color);
-  background-color: var(--backgound-color);
+  background-color: var(--purple-bg);
 }
 
 body {
@@ -33,8 +36,8 @@ input,
 button,
 select,
 textarea {
-  color: black;
-  background-color: white;
+  color: var(--primary-font-color);
+  background-color: var(--white);
   font-family: inherit;
   font-size: inherit;
   padding: 0;
@@ -44,4 +47,6 @@ textarea {
   border-radius: 0;
 }
 
-.parent-height-100{height: 100%;}
+.parent-height-100 {
+  height: 100%;
+}
